<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".textoInfinito">

    <TextView
        android:id="@+id/articleHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/paddingTxT"
        android:text="@string/txt_art_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/articleSubHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/articleHeading"
        android:padding="@dimen/paddingTxT"
        android:text="@string/txt_art_st"
        android:textAppearance="@style/TextAppearance.AppCompat">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/articleSubHead">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/paddingTxT"
                android:text="@string/article_text"
                android:textColor="@color/colorPrimaryDark"></TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Okey"
                android:text="@string/btn_ok">

            </Button>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>