<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recibir">

    <Button
        android:id="@+id/btn_irToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irToast"
        android:text="@string/btn_ir_toast"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ed_m_respuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <TextView
        android:id="@+id/msn_mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ed_m_respuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_irToast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_irToast"
        android:textSize="@dimen/textTamaño">

    </TextView>



    <EditText
        android:id="@+id/ed_m_respuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edtxt_hint_respuesta"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btn_respuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_irToast"
        android:textSize="@dimen/textTamaño">

    </EditText>

    <Button
        android:id="@+id/btn_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="respuesta"
        android:text="@string/btn_respuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_m_respuesta"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>